repaired hero img on mobile

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -123,7 +123,7 @@
   height: 30rem;
   left: 0;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .hero {
     flex-direction: column;
   }
@@ -174,9 +174,9 @@
 
   .hero-img {
     position: relative;
-    width: 14rem;
+    width: 12rem;
     left: 7rem;
-    top: 0;
+    bottom: 0;
     align-self: center;
   }
 }
